--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
     "tailwindcss": "^3.4.14"
   },
   "scripts": {
-    "build:css": "tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch"
+    "build": "tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch"
   }
 }
