--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "tailwindcss": "^3.4.14"
   },
   "scripts": {
-    "build": "tailwindcss -i ./src/css/input.css -o ./src/css/output.css --minify", 
-    "dev": "tailwindcss -i ./src/css/input.css -o ./src/css/output.css --watch"
+    "build": "tailwindcss -i ./src/css/input.css -o ./public/css/output.css --minify" ,
+    "dev": "tailwindcss -i ./src/css/input.css -o ./public/css/output.css --watch"
   }
 }
